Corrected nav menu display on mobile

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ a:hover {
   padding: 10px;
   position: fixed;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
 }
 .nav {
   display: flex;
